--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "dependencies": {
+    "bootstrap": "^4.0.0",
     "botstrap": "^0.15.4",
-    "jquery": "^3.6.3",
-    "popper.js": "^1.16.1"
+    "jquery": "^3.3.1",
+    "popper.js": "^1.12.9"
   }
 }
